--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,10 +9,9 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
             integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script type="text/javascript"
-            src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=echp7ietnz"></script>
+            src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=echp7ietnz&submodules=geocoder"></script>
 </head>
 <body>
-
 <div class="loader">
     <div>
         <img class="ball" src="/img/loading.gif">
@@ -37,7 +36,7 @@
                 <div id="map" style="width:80vw;height:100vh;"></div>
             </article>
             <article>SubContent 2
-                <span th:text="${data}"></span>
+                <span class="thData" th:text="${data}"></span>
             </article>
             <article>SubContent 3</article>
         </section>
@@ -54,6 +53,136 @@
 </body>
 </html>
 <script>
+    infoWindow = null;
+
+    /* 여기부터 데이터 추출부분 */
+    var thData = document.querySelector(".thData").innerHTML;
+    const thArr = thData.split("||");
+
+    var playData = [];
+    var cafeteriaData = [];
+    var cafeData = [];
+    for(var i=0; i<thArr.length; i++){
+        if (i == 0) {
+            playData = thArr[i].split(',');
+        }
+        if (i == 1) {
+            cafeteriaData = thArr[i].split(',');
+        }
+        if (i == 2) {
+            cafeData = thArr[i].split(',');
+        }
+    }
+    console.log(playData);
+    console.log(cafeteriaData);
+    console.log(cafeData);
+
+    var paddr = playData[4];
+    var teriaaddr = cafeteriaData[5];
+    var cafeaddr = cafeData[5];
+    /* 여기까지 */
+
+    function searchAddressToCoordinate(address) {
+        naver.maps.Service.geocode({
+            query: address
+        }, function(status, response) {
+            if (status === naver.maps.Service.Status.ERROR) {
+                if (!address) {
+                    return alert('Geocode Error, Please check address');
+                }
+                return alert('Geocode Error, address:' + address);
+            }
+            if (response.v2.meta.totalCount === 0) {
+                return alert('No result.');
+            }
+            var htmlAddresses = [],
+                item = response.v2.addresses[0],
+                point = new naver.maps.Point(item.x, item.y);
+            if (item.roadAddress) {
+                htmlAddresses.push('[도로명 주소] ' + item.roadAddress);
+            }
+            if (item.jibunAddress) {
+                htmlAddresses.push('[지번 주소] ' + item.jibunAddress);
+            }
+            if (item.englishAddress) {
+                htmlAddresses.push('[영문명 주소] ' + item.englishAddress);
+            }
+            infoWindow.setContent([
+                '<div style="padding:10px;min-width:200px;line-height:150%;">',
+                '<h4 style="margin-top:5px;">검색 주소 : '+ point.y +','+ point.x +' </h4><br />',
+                htmlAddresses.join('<br />'),
+                '</div>'
+            ].join('\n'));
+            map.setCenter(point);
+            infoWindow.open(map, point);
+        });
+    }
+
+    var marker = new naver.maps.Marker({ //마커 생성
+        map: map,
+        /*position: new naver.maps.LatLng(point.y, point.x),*/
+    });
+    naver.maps.Event.addListener(marker, "click", function(e) { //클릭할때마다 정보창 열고 닫기(구현실패)
+        if (infoWindow.getMap()) {
+            infoWindow.close();
+        } else {
+            infoWindow.open(map, marker);
+        }
+    });
+
+    function initGeocoder() { //좌표 구하는 기능
+        var latlng = map.getCenter(); // 위/경도 구하기
+        var utmk = naver.maps.TransCoord.fromLatLngToUTMK(latlng); // 위/경도 -> UTMK
+        var tm128 = naver.maps.TransCoord.fromUTMKToTM128(utmk);   // UTMK -> TM128
+        var naverCoord = naver.maps.TransCoord.fromTM128ToNaver(tm128); // TM128 -> NAVER
+
+        infoWindow = new naver.maps.InfoWindow({
+            content: ''
+        });
+        searchAddressToCoordinate(paddr);
+    }
+    naver.maps.onJSContentLoaded = initGeocoder;
+
+    /* 네이버 지도 API */
+    var mapOptions = { //지도 옵션 설정
+        center: new naver.maps.LatLng(37.4490704, 126.657250),
+        disableKineticPan: false,
+        zoom: 17
+    };
+    var map = new naver.maps.Map('map', mapOptions); //지도 생성
+
+    var marker = new naver.maps.Marker({ //마커 표시
+        position: new naver.maps.LatLng(37.4490704, 126.657250),
+        map: map,
+    });
+
+    naver.maps.Event.addListener(map, 'click', function (e) { //클릭한 지점으로 마커 옮기기
+        marker.setPosition(e.coord);
+    });
+
+    var contentString = [ //정보창의 내용 (차후 수정)
+        '<div class="iw_inner">',
+        '   <h3>인하공업전문대학 7호관</h3>',
+        '   <p>인천광역시 미추홀구 소성로 71<br>',
+        '       <br>',
+        '       <a href="https://www.inhatc.ac.kr/" target="_blank">www.inhatc.ac.kr</a>',
+        '   </p>',
+        '</div>'
+    ].join('');
+
+    var infowindow = new naver.maps.InfoWindow({ //정보창 객체 생성
+        content: contentString
+    });
+
+    naver.maps.Event.addListener(marker, "click", function (e) { //클릭할때마다 정보창 열고 닫기
+        if (infowindow.getMap()) {
+            infowindow.close();
+        } else {
+            infowindow.open(map, marker);
+        }
+    });
+
+
     $(function () {
         /* navBar hover 이벤트 */
         $('header > img').hover(function () {
@@ -149,43 +278,4 @@
             window.location.href = "/Logout"
         }
     }
-
-    /* 네이버 지도 API */
-    var mapOptions = { //지도 옵션 설정
-        center: new naver.maps.LatLng(37.4490704, 126.657250),
-        disableKineticPan: false,
-        zoom: 17
-    };
-    var Inhatc = new naver.maps.Map('map', mapOptions); //지도 생성
-
-    var marker = new naver.maps.Marker({ //마커 표시
-        position: new naver.maps.LatLng(37.4490704, 126.657250),
-        map: Inhatc
-    });
-
-    naver.maps.Event.addListener(Inhatc, 'click', function (e) { //클릭한 지점으로 마커 옮기기
-        marker.setPosition(e.coord);
-    });
-
-    var contentString = [ //정보창의 내용
-        '<div class="iw_inner">',
-        '   <h3>인하공업전문대학 7호관</h3>',
-        '   <p>인천광역시 미추홀구 소성로 71<br>',
-        '       <br>',
-        '       <a href="https://www.inhatc.ac.kr/" target="_blank">www.inhatc.ac.kr</a>',
-        '   </p>',
-        '</div>'
-    ].join('');
-
-    var infowindow = new naver.maps.InfoWindow({ //정보창 객체 생성
-        content: contentString
-    });
-
-    naver.maps.Event.addListener(marker, "click", function (e) { //클릭할때마다 정보창 열고 닫기
-        if (infowindow.getMap()) {
-            infowindow.close();
-        } else {
-            infowindow.open(Inhatc, marker);
-        }
-    });
 </script>
