--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -99,37 +99,13 @@
             var htmlAddresses = [],
                 item = response.v2.addresses[0],
                 point = new naver.maps.Point(item.x, item.y);
-            if (item.roadAddress) {
-                htmlAddresses.push('[도로명 주소] ' + item.roadAddress);
-            }
-            if (item.jibunAddress) {
-                htmlAddresses.push('[지번 주소] ' + item.jibunAddress);
-            }
-            if (item.englishAddress) {
-                htmlAddresses.push('[영문명 주소] ' + item.englishAddress);
-            }
-            infoWindow.setContent([
-                '<div style="padding:10px;min-width:200px;line-height:150%;">',
-                '<h4 style="margin-top:5px;">검색 주소 : '+ point.y +','+ point.x +' </h4><br />',
-                htmlAddresses.join('<br />'),
-                '</div>'
-            ].join('\n'));
-            map.setCenter(point);
-            infoWindow.open(map, point);
+
+            var marker = new naver.maps.Marker({ //마커 생성
+                map: map,
+                position: new naver.maps.LatLng(point.y, point.x),
+            });
         });
     }
-
-    var marker = new naver.maps.Marker({ //마커 생성
-        map: map,
-        /*position: new naver.maps.LatLng(point.y, point.x),*/
-    });
-    naver.maps.Event.addListener(marker, "click", function(e) { //클릭할때마다 정보창 열고 닫기(구현실패)
-        if (infoWindow.getMap()) {
-            infoWindow.close();
-        } else {
-            infoWindow.open(map, marker);
-        }
-    });
 
     function initGeocoder() { //좌표 구하는 기능
         var latlng = map.getCenter(); // 위/경도 구하기
